Fix layout of menu boxes using flex: remove height property and add align-self:flex-start

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -422,11 +422,12 @@ h1, h2 {
 }
 
 .menu-box {
-        height: 900px;
-        width: 25%;
+        
+        width: 30%;
         background-color:#ddead1;
         border-radius: 30px;
         box-shadow: 0 0 5px 3px rgba(50, 50, 50, .25);
+        align-self:flex-start;
 }
 
 .menu-box-text {
@@ -481,6 +482,8 @@ h1, h2 {
         text-align: right;
         float: right;
 }
+
+
 
 
 
